--- a/notebooks/20-train-skl-models.ipynb
+++ b/notebooks/20-train-skl-models.ipynb
@@ -6853,7 +6853,7 @@
    "id": "34299919",
    "metadata": {},
    "source": [
-    "# Stereo"
+    "# Stereo (linear baseline only)"
    ]
   },
   {
