debug: single view cnn

--- a/notebooks/21-train-torch-models.ipynb
+++ b/notebooks/21-train-torch-models.ipynb
@@ -2669,6 +2669,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "56e1a64b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DEBUGGING\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "1637ca88",
    "metadata": {},
@@ -3510,6 +3520,194 @@
     "from sklearn.model_selection import train_test_split\n",
     "import torchvision.transforms as T\n",
     "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2a0250b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "instantiate datamodule...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# DEBUGGING\n",
+    "# Set your parameters\n",
+    "hdf_file = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/imgs-ml-ready/shuffled_small/default_shuffled_small.h5'\n",
+    "batch_size = 128\n",
+    "targets = ['n_arms']  # Replace with your actual target column name\n",
+    "random_state = 666\n",
+    "lr = 1e-3\n",
+    "n_epochs = 10\n",
+    "# num_gpus = torch.cuda.device_count()\n",
+    "num_gpus = 1\n",
+    "num_cpus = 18\n",
+    "\n",
+    "# # specify train/val/test indices using sklearn\n",
+    "# indices = list(range(7_000_000))\n",
+    "# train_idx, temp_idx = train_test_split(indices, test_size=0.30, random_state=random_state)\n",
+    "# val_idx, test_idx = train_test_split(temp_idx, test_size=0.50, random_state=random_state)\n",
+    "subset_size = 1.0  # subset percentage\n",
+    "\n",
+    "# set up logger information\n",
+    "log_dir = '/glade/u/home/joko/ice3d/models/lightning_logs'\n",
+    "tb_log_name = f'cnn-vanilla-classification-subset-tb'\n",
+    "csv_log_name = f'cnn-vanilla-classification-subset-csv'\n",
+    "tb_logger = TensorBoardLogger(log_dir, name=tb_log_name)\n",
+    "csv_logger = CSVLogger(log_dir, name=csv_log_name)\n",
+    "\n",
+    "# Input transform: random crop, flip, normalization, etc.\n",
+    "train_transform = T.Compose([\n",
+    "    T.RandomHorizontalFlip(),\n",
+    "    T.RandomVerticalFlip(),\n",
+    "    transforms.Normalize(mean=[0.5],       # Zero-mean normalization\n",
+    "                         std=[1.0]),\n",
+    "])\n",
+    "\n",
+    "# validation transform: resize, normalization\n",
+    "val_transform = T.Compose([\n",
+    "    transforms.Normalize(mean=[0.5],       # Zero-mean normalization\n",
+    "                         std=[1.0])\n",
+    "])\n",
+    "\n",
+    "class_mapping_file = '/glade/u/home/joko/ice3d/data/class_to_idx.json'\n",
+    "# Load class mapping from JSON file\n",
+    "with open(class_mapping_file, 'r') as f:\n",
+    "    class_to_idx = json.load(f)\n",
+    "num_classes = len(class_to_idx)  # Number of unique classes in n_arms\n",
+    "\n",
+    "# Instantiate the DataModule\n",
+    "print('instantiate datamodule...')\n",
+    "dm = SingleViewDataModule(\n",
+    "    hdf_file=hdf_file,\n",
+    "    target_names=targets,\n",
+    "    train_idx=None,\n",
+    "    val_idx=None,\n",
+    "    test_idx=None,\n",
+    "    batch_size=batch_size,\n",
+    "    subset_size=subset_size,\n",
+    "    subset_seed=random_state,\n",
+    "    num_workers=num_cpus,\n",
+    "    prefetch_factor=4,\n",
+    "    train_transform=train_transform,\n",
+    "    val_transform=val_transform,\n",
+    "    test_transform=val_transform,  # Often same as val\n",
+    "    train_target_transform=None,\n",
+    "    val_target_transform=None,\n",
+    "    test_target_transform=None,\n",
+    "    task_type='classification',  # Specify the task type\n",
+    "    class_to_idx=class_to_idx  # Optional: mapping of class names to indices\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1f812cff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample training labels:\n",
+      "tensor(2)\n",
+      "tensor(6)\n",
+      "tensor(1)\n",
+      "tensor(1)\n",
+      "tensor(2)\n",
+      "tensor(1)\n",
+      "tensor(0)\n",
+      "tensor(3)\n",
+      "tensor(6)\n",
+      "tensor(1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "dm.setup()\n",
+    "# print a subset of training labels to QA\n",
+    "print(\"Sample training labels:\")\n",
+    "for i in range(10):\n",
+    "    print(dm.train_dataset[i][1])  # Assuming the target is the second element in the tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "773f55da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You are using the plain ModelCheckpoint callback. Consider using LitModelCheckpoint which with seamless uploading to Model registry.\n",
+      "GPU available: True (cuda), used: True\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "HPU available: False, using: 0 HPUs\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set up model and trainer...\n",
+      "Training model with 1 gpu(s)...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
+      "\n",
+      "  | Name  | Type      | Params | Mode \n",
+      "--------------------------------------------\n",
+      "0 | conv1 | Conv2d    | 160    | train\n",
+      "1 | conv2 | Conv2d    | 4.6 K  | train\n",
+      "2 | conv3 | Conv2d    | 18.5 K | train\n",
+      "3 | pool  | MaxPool2d | 0      | train\n",
+      "4 | fc1   | Linear    | 6.4 M  | train\n",
+      "5 | fc2   | Linear    | 8.3 K  | train\n",
+      "6 | fc3   | Linear    | 455    | train\n",
+      "--------------------------------------------\n",
+      "6.5 M     Trainable params\n",
+      "0         Non-trainable params\n",
+      "6.5 M     Total params\n",
+      "25.819    Total estimated model params size (MB)\n",
+      "7         Modules in train mode\n",
+      "0         Modules in eval mode\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0:   5%|▍         | 184/3828 [00:17<05:40, 10.70it/s, v_num=5]       "
+     ]
+    }
+   ],
+   "source": [
+    "# train VanillaCNNClassification\n",
+    "print('set up model and trainer...')\n",
+    "model = VanillaCNNClassification(input_channels=1, num_classes=num_classes, learning_rate=lr)\n",
+    "trainer = Trainer(max_epochs=n_epochs, \n",
+    "                  accelerator=\"auto\",\n",
+    "                  devices=num_gpus,\n",
+    "                #   strategy=\"ddp_notebook\", # distributed data parallel\n",
+    "                  logger=[csv_logger, tb_logger],\n",
+    "                  enable_progress_bar=True)\n",
+    "\n",
+    "# train model\n",
+    "print(f'Training model with {num_gpus} gpu(s)...')\n",
+    "trainer.fit(model, dm)"
    ]
   },
   {
@@ -5353,9 +5551,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (torch)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "torch"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
