--- a/notebooks/29-check-split-distributions.ipynb
+++ b/notebooks/29-check-split-distributions.ipynb
@@ -434,7 +434,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.13.3 ('gcp': conda)",
    "language": "python",
    "name": "python3"
   },
@@ -449,6 +449,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.13.3"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "641b0aa9178aaf0955818e11c3223148d81b9ca2f79b396bf44b3b8eb4c9f830"
+   }
   }
  },
  "nbformat": 4,
