manual training for testing

--- a/notebooks/30-create-indices.ipynb
+++ b/notebooks/30-create-indices.ipynb
@@ -2389,9 +2389,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fa73efa5",
+   "metadata": {},
+   "source": [
+    "# Generate sequential idx text files (train/val/test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "195eb002",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set indices of train/val/test sets\n",
+    "split = [0.7, 0.15, 0.15]\n",
+    "n_data = 700_000\n",
+    "assert abs(sum(split) - 1.0) < 1e-8, \"Split does not sum to 1\"\n",
+    "n_train = int(split[0] * n_data)\n",
+    "n_val = int(split[1] * n_data)\n",
+    "n_test = n_data - n_train - n_val  # ensures all data is used\n",
+    "train_idx = list(range(0, n_train))\n",
+    "val_idx = list(range(n_train, n_train + n_val))\n",
+    "test_idx = list(range(n_train + n_val, n_data))\n",
+    "# save as text file \n",
+    "train_path = '/home/jko/synth-ros-data/idx/idx-train-sequential-subset-70k.txt'\n",
+    "val_path = '/home/jko/synth-ros-data/idx/idx-val-sequential-subset-70k.txt'\n",
+    "test_path = '/home/jko/synth-ros-data/idx/idx-test-sequential-subset-70k.txt'\n",
+    "with open(train_path, \"w\") as f:\n",
+    "    for num in train_idx:\n",
+    "        f.write(f\"{num}\\n\")\n",
+    "with open(val_path, \"w\") as f:\n",
+    "    for num in val_idx:\n",
+    "        f.write(f\"{num}\\n\")\n",
+    "with open(test_path, \"w\") as f:\n",
+    "    for num in test_idx:\n",
+    "        f.write(f\"{num}\\n\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa73efa5",
+   "id": "7a144668",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2399,7 +2439,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "195eb002",
+   "id": "b7c7a773",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc9d5b9d",
    "metadata": {},
    "outputs": [],
    "source": []
