--- a/notebooks/train-models/01-train-mlp.ipynb
+++ b/notebooks/train-models/01-train-mlp.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,9 +97,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "700000 700000\n"
+     ]
+    }
+   ],
    "source": [
     "n_rand = 666 # random seed\n",
     "data_dir = '/home/jko/synth-ros-data/tabular-data-v2/shuffled_small'\n",
@@ -127,9 +135,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train indices: 0 to 489998\n",
+      "Val indices: 489999 to 594998\n",
+      "Test indices: 594999 to 699999\n"
+     ]
+    }
+   ],
    "source": [
     "# set indices of train/val/test sets\n",
     "split = [0.7, 0.15, 0.15]\n",
@@ -151,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,6 +189,23 @@
     "    val_idx=val_idx,\n",
     "    test_idx=test_idx,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "489999\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(dm.train_idx))"
    ]
   },
   {
@@ -292,7 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert test data to PyTorch tensors\n",
+    "# get test data\n",
     "test_loader = dm.test_dataloader()\n",
     "all_preds = []\n",
     "all_targets = []\n",
