leave idx loading as is

--- a/notebooks/train-models/03-train-resnet.ipynb
+++ b/notebooks/train-models/03-train-resnet.ipynb
@@ -226,7 +226,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 4:  44%|████▍     | 6811/15312 [03:04<03:50, 36.83it/s, v_num=0]     "
+      "Epoch 4:  86%|████████▋ | 13234/15312 [05:58<00:56, 36.95it/s, v_num=0]    "
      ]
     }
    ],
