update to latest

--- a/notebooks/08-gen-params.ipynb
+++ b/notebooks/08-gen-params.ipynb
@@ -82,7 +82,7 @@
     "# define parameter ranges \n",
     "a_min, a_max = 9.44, 33.90 # microns\n",
     "c_over_a_min, c_over_a_max = 1.19, 5.75 # unitless\n",
-    "f_r0_min, f_r0_max = 0.8, 1.25\n",
+    "f_r0_min, f_r0_max = 0.8, 1.2\n",
     "f_hp_min, f_hp_max = 0.8, 1.2\n",
     "f_h0_min, f_h0_max = 0.8, 1.2\n",
     "\n",
@@ -588,9 +588,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cq]",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
-   "name": "conda-env-cq-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -602,7 +602,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
