--- a/notebooks/07-generate-data-outline.ipynb
+++ b/notebooks/07-generate-data-outline.ipynb
@@ -764,9 +764,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cq]",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
-   "name": "conda-env-cq-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -778,7 +778,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
