--- a/notebooks/ml-training-and-eval/train/01-train-skl.ipynb
+++ b/notebooks/ml-training-and-eval/train/01-train-skl.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ea87da15-847a-4b67-b61b-cabd6966088c",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c530abb0-b9dd-4e2c-b4e3-0768fa4ea17c",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,15 @@
     "out_dir = '/home/jko/temp/skl-models'\n",
     "os.makedirs(out_dir, exist_ok=True)\n",
     "# set number of cpus available\n",
-    "ncpus = 16"
+    "ncpus = 32"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f1ac697",
+   "metadata": {},
+   "source": [
+    "For point of reference, this whole notebook runs in a few minutes with 32 cpus."
    ]
   },
   {
@@ -92,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "72fe1555",
    "metadata": {},
    "outputs": [],
@@ -112,16 +120,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9837ad9d-ce0d-4e1c-9f09-2db7d391954f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "700000 700000\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['/home/jko/temp/skl-models/lin_reg.pkl']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -158,16 +169,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "be3dc102",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "700000 700000\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['/home/jko/temp/skl-models/lin_cls.pkl']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -208,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "dd515109",
    "metadata": {},
    "outputs": [],
@@ -228,16 +242,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "14f643b3",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "700000 700000\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['/home/jko/temp/skl-models/lin_reg_stereo_2ds.pkl']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -273,16 +290,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "92b633cb",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "700000 700000\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['/home/jko/temp/skl-models/lin_cls_stereo_2ds.pkl']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -307,7 +327,6 @@
     "X_test_scaled = scaler.transform(X_test)\n",
     "linear_classifier.fit(X_train_scaled, y_train.values.ravel())\n",
     "# save model\n",
-    "out_dir = '/home/jko/ice3d/models/skl-models'\n",
     "out_filename = 'lin_cls_stereo_2ds.pkl'\n",
     "out_path = os.path.join(out_dir, out_filename)\n",
     "joblib.dump(linear_classifier, out_path)"
@@ -323,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "160c1cc7",
    "metadata": {},
    "outputs": [],
@@ -343,16 +362,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "3e8486af",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "700000 700000\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['/home/jko/temp/skl-models/lin_reg_stereo_phips.pkl']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -388,16 +410,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b98a4312",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "700000 700000\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['/home/jko/temp/skl-models/lin_cls_stereo_phips.pkl']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -437,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "130f0af5",
    "metadata": {},
    "outputs": [],
@@ -457,16 +482,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "5ba1d0b6",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "700000 700000\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['/home/jko/temp/skl-models/rf_reg.pkl']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -507,16 +535,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "581e9f0f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "700000 700000\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['/home/jko/temp/skl-models/rf_cls.pkl']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -555,9 +586,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "npl",
+   "display_name": "Python 3.13.3 ('torch')",
    "language": "python",
-   "name": "npl"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -569,7 +600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.3"
   },
   "vscode": {
    "interpreter": {
