--- a/notebooks/11-test-projections.ipynb
+++ b/notebooks/11-test-projections.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "69d90bdc-7fcf-446a-a50b-33798d89e424",
    "metadata": {},
    "outputs": [
@@ -41,34 +41,34 @@
        "\n",
        "<table style='width: 100%;'>\n",
        "<tr><th>PolyData</th><th>Information</th></tr>\n",
-       "<tr><td>N Cells</td><td>6354</td></tr>\n",
-       "<tr><td>N Points</td><td>3173</td></tr>\n",
+       "<tr><td>N Cells</td><td>7856</td></tr>\n",
+       "<tr><td>N Points</td><td>3918</td></tr>\n",
        "<tr><td>N Strips</td><td>0</td></tr>\n",
-       "<tr><td>X Bounds</td><td>-1.268e+02, 1.635e+02</td></tr>\n",
-       "<tr><td>Y Bounds</td><td>-1.626e+02, 1.409e+02</td></tr>\n",
-       "<tr><td>Z Bounds</td><td>-1.322e+02, 1.476e+02</td></tr>\n",
+       "<tr><td>X Bounds</td><td>-3.120e+02, 3.618e+02</td></tr>\n",
+       "<tr><td>Y Bounds</td><td>-4.412e+02, 4.149e+02</td></tr>\n",
+       "<tr><td>Z Bounds</td><td>-2.623e+02, 1.659e+02</td></tr>\n",
        "<tr><td>N Arrays</td><td>0</td></tr>\n",
        "</table>\n",
        "\n"
       ],
       "text/plain": [
-       "PolyData (0x150722ce1360)\n",
-       "  N Cells:    6354\n",
-       "  N Points:   3173\n",
+       "PolyData (0x7f2a585bd6c0)\n",
+       "  N Cells:    7856\n",
+       "  N Points:   3918\n",
        "  N Strips:   0\n",
-       "  X Bounds:   -1.268e+02, 1.635e+02\n",
-       "  Y Bounds:   -1.626e+02, 1.409e+02\n",
-       "  Z Bounds:   -1.322e+02, 1.476e+02\n",
+       "  X Bounds:   -3.120e+02, 3.618e+02\n",
+       "  Y Bounds:   -4.412e+02, 4.149e+02\n",
+       "  Z Bounds:   -2.623e+02, 1.659e+02\n",
        "  N Arrays:   0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stl_dir = '/glade/derecho/scratch/joko/synth-ros/n1000-test-20250226'\n",
+    "stl_dir = '/glade/derecho/scratch/joko/synth-ros/n1000-test-20250226/stl'\n",
     "id = random.randint(1, 69999)\n",
     "id = f'{id:06d}'\n",
     "mesh = pv.read(os.path.join(stl_dir, f'ros-test-{id}.stl'))\n",
@@ -92,13 +92,14 @@
    "source": [
     "%%time\n",
     "# Generate random views of the particle and save as png\n",
-    "save_path = '/glade/derecho/scratch/joko/synth-ros/test-projections'\n",
-    "n_renders = 100\n",
-    "res = 64\n",
-    "bg_color='black'\n",
-    "obj_color='white'\n",
-    "op=0.9\n",
+    "save_path = '/path/to/save/folder'  # Change this to your desired save path\n",
+    "n_renders = 100 # number of random views to generate\n",
+    "res = 64 # resolution of the output images (res x res pixels)\n",
+    "bg_color='black' # background color of the plot\n",
+    "obj_color='white' # color of the object in the plot\n",
+    "op=0.9 # opacity of the object in the plot\n",
     "\n",
+    "# initate the plotter\n",
     "pl = pv.Plotter(off_screen=True, window_size=[res, res])\n",
     "pl.background_color = bg_color\n",
     "pl.enable_parallel_projection()\n",
@@ -226,9 +227,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:.conda-pyvista_pip]",
+   "display_name": "pyvista_pip",
    "language": "python",
-   "name": "conda-env-.conda-pyvista_pip-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
